--- a/src/CMS/ProductBundle/Resources/config/doctrine/Color.orm.yml
+++ b/src/CMS/ProductBundle/Resources/config/doctrine/Color.orm.yml
@@ -22,6 +22,12 @@ CMS\ProductBundle\Entity\Color:
             length: 45
             fixed: false
             comment: ''
+        image:
+            type: string
+            nullable: true
+            length: 100
+            fixed: false
+            comment: ''
         hexadecimal:
             type: string
             nullable: true
