--- a/src/CMS/CoresBundle/Resources/config/doctrine/Color.orm.yml
+++ b/src/CMS/CoresBundle/Resources/config/doctrine/Color.orm.yml
@@ -21,6 +21,12 @@ CMS\CoresBundle\Entity\Color:
             length: 45
             fixed: false
             comment: ''
+        image:
+            type: string
+            nullable: true
+            length: 100
+            fixed: false
+            comment: ''
         hexadecimal:
             type: string
             nullable: true
