--- a/src/CMS/RepresentanteBundle/Resources/config/routing/representante.yml
+++ b/src/CMS/RepresentanteBundle/Resources/config/routing/representante.yml
@@ -33,3 +33,8 @@ cms_representantes_delete_all:
     pattern:  /delete_all
     defaults: { _controller: "CMSRepresentanteBundle:Representante:deleteAll" }
     requirements: { _method: post }
+
+cms_representantes_ajax_estados:
+    pattern:  /ajax_estados
+    defaults: { _controller: "CMSRepresentanteBundle:Representante:ajax" }
+    requirements: { _method: post }
