--- a/web/.htaccess
+++ b/web/.htaccess
@@ -65,3 +65,30 @@ DirectoryIndex app.php
         # RedirectTemp cannot be used instead
     </IfModule>
 </IfModule>
+
+<ifModule mod_gzip.c>
+    SetOutputFilter DEFLATE
+    SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png)$ no-gzip
+    AddOutputFilterByType DEFLATE application/javascript
+      AddOutputFilterByType DEFLATE application/rss+xml
+      AddOutputFilterByType DEFLATE application/vnd.ms-fontobject
+      AddOutputFilterByType DEFLATE application/x-font
+      AddOutputFilterByType DEFLATE application/x-font-opentype
+      AddOutputFilterByType DEFLATE application/x-font-otf
+      AddOutputFilterByType DEFLATE application/x-font-truetype
+      AddOutputFilterByType DEFLATE application/x-font-ttf
+      AddOutputFilterByType DEFLATE application/x-javascript
+      AddOutputFilterByType DEFLATE application/xhtml+xml
+      AddOutputFilterByType DEFLATE application/xml
+      AddOutputFilterByType DEFLATE font/opentype
+      AddOutputFilterByType DEFLATE font/otf
+      AddOutputFilterByType DEFLATE font/ttf
+      AddOutputFilterByType DEFLATE image/svg+xml
+      AddOutputFilterByType DEFLATE image/x-icon
+      AddOutputFilterByType DEFLATE text/css
+      AddOutputFilterByType DEFLATE text/html
+      AddOutputFilterByType DEFLATE text/javascript
+      AddOutputFilterByType DEFLATE text/plain
+      AddOutputFilterByType DEFLATE text/xml
+    AddOutputFilterByType DEFLATE application/vnd.ms-fontobject application/x-font-ttf image/svg+xml
+</ifModule>
