- Adicionado controles de imagens de fundo nas paginas do CMS. - Adicionado um autoloader (DataFixture) para Paginas. - Alteradas as paginas: (A Douat, Servicos Prestados, Nossas Malhas,   Fitness, Escolar, Lingerie, Praia) para mostrar as imagens de fundo selecionadas no CMS.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+cms_banner:
+    resource: "@CMSBannerBundle/Resources/config/routing.yml"
+    prefix:   /
+
 cms_page:
     resource: "@CMSPageBundle/Resources/config/routing.yml"
     prefix:   /
