- Criação do módulo de Banner no CMS e acesso as páginas. - Correção nas estruturas das entidades repetidas.

--- a/src/CMS/CoresBundle/Resources/config/doctrine/Color.orm.yml
+++ b/src/CMS/CoresBundle/Resources/config/doctrine/Color.orm.yml
@@ -1,6 +1,7 @@
 CMS\CoresBundle\Entity\Color:
     type: entity
     table: color
+    repositoryClass: CMS\CoresBundle\Entity\ColorRepository
     indexes:
         fk_color_pantone1_idx:
             columns:
