--- a/src/CMS/PageBundle/Resources/config/doctrine/Paginas.orm.yml
+++ b/src/CMS/PageBundle/Resources/config/doctrine/Paginas.orm.yml
@@ -50,4 +50,9 @@ CMS\PageBundle\Entity\Paginas:
             gedmo:
                 timestampable:
                   on: update
+        isDark:
+            type: boolean
+            nullable: false
+            comment: ''
+            column: is_dark
     lifecycleCallbacks: {  }
