--- a/src/CMS/ProductBundle/Resources/config/doctrine/ProductColor.orm.yml
+++ b/src/CMS/ProductBundle/Resources/config/doctrine/ProductColor.orm.yml
@@ -27,7 +27,7 @@ CMS\ProductBundle\Entity\ProductColor:
             comment: ''
     manyToOne:
         color:
-            targetEntity: Color
+            targetEntity: CMS\CoresBundle\Entity\Color
             cascade: {  }
             mappedBy: null
             inversedBy: null
