--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -64,6 +64,12 @@ doctrine:
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
         auto_mapping: true
+        #entity_managers:
+        #    default:
+        #        connection: default
+        #        mappings:
+        #            CMSBannerBundle: ~
+        #            CMSPageBundle: ~
         #mappings:
         #    StofDoctrineExtensionsBundle: ~
 
