--- a/src/CMS/BannerBundle/Resources/config/routing.yml
+++ b/src/CMS/BannerBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 cms_banner_homepage:
     pattern:  /cms_banner
     defaults: { _controller: CMSBannerBundle:Default:index }
+
+CMSBannerBundle_cms_banner:
+        resource: "@CMSBannerBundle/Resources/config/routing/banner.yml"
+        prefix:   /cms/banner
