--- a/src/CMS/RepresentanteBundle/Resources/config/doctrine/Representante.orm.yml
+++ b/src/CMS/RepresentanteBundle/Resources/config/doctrine/Representante.orm.yml
@@ -27,7 +27,7 @@ CMS\RepresentanteBundle\Entity\Representante:
             comment: ''
         address:
             type: string
-            nullable: false
+            nullable: true
             length: 255
             fixed: false
             comment: ''
