- Adicionada ordenamento por posição na opção de banner no CMS. - Listando os banners na pagina inicial na ordem das posições configuradas no CMS.

--- a/src/CMS/BannerBundle/Resources/config/routing/banner.yml
+++ b/src/CMS/BannerBundle/Resources/config/routing/banner.yml
@@ -38,3 +38,8 @@ cms_banner_paginate:
      pattern:  /pagina/{page}
      defaults: { _controller: "CMSBannerBundle:Banner:paginate" }
      requirements: { _method: get|post }
+
+cms_banner_position:
+     pattern:  /position/{id}/{option}
+     defaults: { _controller: "CMSBannerBundle:Banner:moveOrder" }
+     requirements: { _method: get }
