- Adicionando a ordenação de produtos no CMS e mostrando no site.

--- a/src/CMS/ProductBundle/Resources/config/doctrine/Product.orm.yml
+++ b/src/CMS/ProductBundle/Resources/config/doctrine/Product.orm.yml
@@ -103,6 +103,11 @@ CMS\ProductBundle\Entity\Product:
             comment: ''
             default: '1'
             column: is_active
+        position:
+            type: integer
+            nullable: false
+            fixed: false
+            comment: ''
     manyToOne:
         productCategory:
             targetEntity: ProductCategory
