Adicionando o cadastro de região no CMS.

--- a/src/CMS/ConfiguracoesBundle/Resources/config/routing.yml
+++ b/src/CMS/ConfiguracoesBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+cms_configuracoes_cms_regiao:
+    resource: "@CMSConfiguracoesBundle/Resources/config/routing/regiao.yml"
+    prefix:   /cms/regiao
+
 cms_configuracoes_homepage:
     pattern:  /hello/{name}
     defaults: { _controller: CMSConfiguracoesBundle:Default:index }
